Split rest model from api and update bpm start parameters.